--- a/grids.html
+++ b/grids.html
@@ -27,6 +27,8 @@
 
                     <input type="submit" name="enviar" value="Enviar" class="btn-enviar">
             </form>
+
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet quo ipsam, illum eos, nihil dolor error fugit libero eius, totam officiis quasi et obcaecati sapiente iste iusto odit molestiae dolores.
         </section>
     </main>
 
