--- a/grids.html
+++ b/grids.html
@@ -31,8 +31,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet quo ipsam, illum eos, nihil dolor error fugit libero eius, totam officiis quasi et obcaecati sapiente iste iusto odit molestiae dolores.
 
             <div>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas, aliquid temporibus porro totam excepturi eligendi. Illum eaque natus animi necessitatibus laborum dolore iusto odio, hic dolores deserunt voluptatum error aspernatur.</p>
-                <h1>LAURA</h1>
+                <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas, aliquid temporibus porro totam excepturi eligendi. Illum eaque natus animi necessitatibus laborum dolore iusto odio, hic dolores deserunt voluptatum error aspernatur.</span>
             </div>
         </section>
     </main>
